--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Primeira Página</title>
+    <title>Primeira Página 2</title>
 </head>
 <body>
     <p>Teste</p>
+    <p>Parágrafo 2</p>
 </body>
 </html>
